--- a/package.json
+++ b/package.json
@@ -1,49 +1,27 @@
+``json
 {
-  "name": "dtec-mini-v2",
+  "name": "kaveesha-mini-md",
   "version": "1.0.0",
-  "description": "WhatsApp Bot with Multi-Number Support",
+  "description": "WhatsApp Bot by Kaveesha",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "dependencies": {
-    "baileys": "npm:baileys-dtz@^5.0.0",
-    "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
-    "pino": "^8.17.0",
-    "jimp": "^0.16.1",
-    "@dark-yasiya/scrap": "1.0.1",
-    "@octokit/rest": "^20.0.2",
-    "denethdev-ytmp3": "1.0.3",
-    "cheerio": "1.1.0",
-    "ruhend-scraper": "9.0.1",
-    "@google/genai": "1.22.0",
-    "yt-search": "2.12.1",
+    "@whiskeysockets/baileys": "latest",
+    "@hapi/boom": "^10.0.1",
+    "axios": "^1.6.0",
+    "file-type": "^16.5.3",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.1.1",
+    "pino": "^9.0.0",
+    "qrcode-terminal": "^0.12.0",
+    "util": "^0.12.5",
     "fluent-ffmpeg": "^2.1.2",
-    "ffmpeg-static": "^5.1.0",
-    "node-fetch": "3.3.2",
-    "sharp": "0.32.6",
-    "@dark-yasiya/yt-dl.js": "1.0.5",
-    "file-type": "21.0.0",
-    "axios": "^1.2.5",
-    "moment-timezone": "^0.6.0",
-    "mongodb": "^5.7.0",
-    "telegraph-uploader": "2.0.0",
-    "imgbb-uploader": "1.5.1",
-    "@blackamda/telegram-image-url": "1.0.0",
-    "wa-sticker-formatter": "^4.4.4"
-  },
-  "engines": {
-    "node": ">=18.x"
-  },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "multi-device",
-    "baileys",
-    "dtec-mini"
-  ],
-  "author": "Dileepa Tech",
-  "license": "MIT"
+    "ytdl-core": "latest"
+  }
 }
+```
+
+-----
